<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_9" orientation="portrait" appearance="dark"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sKk-bt-MiK">
                                <rect key="frame" x="20" y="72" width="400" height="850"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zKk-wb-LUn">
                                        <rect key="frame" x="0.0" y="0.0" width="400" height="23.333333333333332"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iym-sg-8XK" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="23.333333333333332"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mO-rI-jaH" userLabel="Index Label">
                                                <rect key="frame" x="359.66666666666669" y="0.0" width="40.333333333333314" height="23.333333333333332"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zNI-B9-UEh" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.333333333333314" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="zNI-B9-UEh" secondAttribute="height" multiplier="2:3" id="2jP-6O-Pmk"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGb-L5-dLl" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="624.33333333333337" width="400" height="145.66666666666663"/>
                                        <string key="text">Рейтинг этого фильма
меньше чем 5?</string>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dSk-Nq-EWb">
                                        <rect key="frame" x="0.0" y="790" width="400" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4VP-qA-Lnn" userLabel="No Button">
                                                <rect key="frame" x="0.0" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="tId-76-m3N"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iKp-w9-FoW"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jb0-ah-sYQ" userLabel="Yes Button">
                                                <rect key="frame" x="210" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Pb-Pg-tL5"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="jb0-ah-sYQ" firstAttribute="height" secondItem="4VP-qA-Lnn" secondAttribute="height" id="Tee-GF-ctD"/>
                                            <constraint firstItem="jb0-ah-sYQ" firstAttribute="width" secondItem="4VP-qA-Lnn" secondAttribute="width" id="x8W-EJ-2mx"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="zNI-B9-UEh" firstAttribute="top" secondItem="zKk-wb-LUn" secondAttribute="bottom" constant="20" id="7OK-pg-dx4"/>
                                    <constraint firstItem="zKk-wb-LUn" firstAttribute="top" secondItem="sKk-bt-MiK" secondAttribute="top" id="h7v-q5-m2e"/>
                                    <constraint firstItem="zKk-wb-LUn" firstAttribute="leading" secondItem="sKk-bt-MiK" secondAttribute="leading" id="vVs-g0-Gin"/>
                                    <constraint firstAttribute="trailing" secondItem="zKk-wb-LUn" secondAttribute="trailing" id="wbb-ZV-hFO"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="9XF-ly-Wfq">
                                <rect key="frame" x="210" y="468" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="sKk-bt-MiK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="02x-H9-yvq"/>
                            <constraint firstItem="sKk-bt-MiK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="0IV-y0-Kpg"/>
                            <constraint firstItem="9XF-ly-Wfq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2H9-VZ-nby"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sKk-bt-MiK" secondAttribute="bottom" id="BDi-N7-CaG"/>
                            <constraint firstItem="dSk-Nq-EWb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Gg8-9C-wWs"/>
                            <constraint firstItem="gGb-L5-dLl" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="KhD-A1-0xB"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sKk-bt-MiK" secondAttribute="trailing" constant="20" id="bf7-5s-QDv"/>
                            <constraint firstItem="9XF-ly-Wfq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="enj-wn-Mai"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="9XF-ly-Wfq" id="kr4-KL-u5K"/>
                        <outlet property="counterLabel" destination="7mO-rI-jaH" id="sSw-NC-AB2"/>
                        <outlet property="imageView" destination="zNI-B9-UEh" id="YX5-Ah-ga3"/>
                        <outlet property="noButton" destination="4VP-qA-Lnn" id="paQ-79-y1n"/>
                        <outlet property="textLabel" destination="gGb-L5-dLl" id="rLY-un-qX8"/>
                        <outlet property="yesButton" destination="jb0-ah-sYQ" id="RvH-rK-qAz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
