...
            "Поздравляем, вы ответили на 10 из 10!" :
            "Вы ответили на \(correctAnswers) из 10, попробуйте ещё раз!"
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз",
                correntAnswers:correctAnswers,
                totalQuestions: questionsAmount
            )
                viewController?.show(quiz: viewModel)
        } else {
            self.switchToNextQuestion()
...
